cmake_minimum_required(VERSION 3.13)
project(Algorithm)

set(CMAKE_CXX_STANDARD 11)

add_executable(Algorithm main.cpp header/StringOperation.h greedy/JumpGame.h header/BestLoadDepth.h header/ImageColor.h min/Graph.h header/SmallPractice.h track/ThreeSumTrackBack.h header/ThreeSum.h track/Hanoi.h util/ArrayHelper.h header/ThreeSumClosest.h header/BestLoadGreedy.h track/Knapsack01TrackBack.h header/BestLoadBreadth.h header/PolygonGame.h header/DinnerFriend.h header/FourSum.h header/Parenthesis.h union/UnionFind1.h union/UnionFindHelper.h union/UnionFind2.h union/UnionFind3.h union/UnionFind4.h union/UnionFind5.h union/UnionFind6.h)